[project]
name = "Financial_AI_Agent"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dateparser==1.2.0",
    "jsonlines==4.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "regex==2024.11.6",
    "scikit-learn==1.5.1",
    "sentence-transformers==2.7.0",
    "spacy==3.7.4",
    "torch>=2.2.0",
    "tqdm>=4.66.2",
    "transformers>=4.39.0",
    "pip==26.0.1",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "langgraph>=0.1.19",
    "yfinance>=0.2.37",
    "groq>=1.0.0",
    "pyarrow>=15.0.0",
    "fastparquet>=2024.2.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "nsepython>=2.97",
    "alpha-vantage>=2.3.1",
    "fredapi>=0.5.2",
    "wbdata>=0.3.0",
    "beautifulsoup4>=4.12.3",
    "newsapi-python>=0.2.7",
    "gdeltdoc>=1.6.0",
    "sentencepiece>=0.2.0",
    "pyyaml>=6.0.1",
    "apscheduler>=3.10.4",
    "loguru>=0.7.2",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "tenacity>=8.2.3",
    "openpyxl>=3.1.5",
    "scipy>=1.12.0",
]
